--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/client",
+  "name": "easy-work",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,8 +11,6 @@
   "dependencies": {
     "@hebcal/core": "^6.0.6",
     "@hookform/resolvers": "^5.2.2",
-    "@prisma/adapter-pg": "^7.2.0",
-    "@prisma/client": "^7.2.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -39,7 +37,6 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@repo/database": "workspace:*",
     "@tanstack/react-devtools": "^0.9.2",
     "@tanstack/react-form": "^1.27.7",
     "@tanstack/react-form-devtools": "^0.2.11",
@@ -49,7 +46,6 @@
     "@tanstack/react-virtual": "^3.13.14",
     "add": "^2.0.6",
     "axios": "^1.13.2",
-    "better-auth": "^1.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
