--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.29.2",
+    "idb-keyval": "^6.2.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "mime": "^4.1.0",
